--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
      <form class="add-items">
        <input type="text" name="item" placeholder="Item Name" required>
        <input type="submit" value="+ Add Item">
+       <!-- <input type="submit" value="Delete">
+       <input type="submit" value="Check All">
+       <input type="submit" value="Uncheck All"> -->
      </form>
    </div>
 
